--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -50,5 +50,9 @@
     "image": "Avatar",
     "save": "Save user",
     "edit": "Edit user"
+  },
+  "homepage": {
+    "outstanding-doctor": "Last week's featured doctor",
+    "more-info": "More information"
   }
 }
