--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -57,5 +57,11 @@
   "homepage": {
     "outstanding-doctor": "Last week's featured doctor",
     "more-info": "More information"
+  },
+  "manage-schedule": {
+    "title": "Manage doctor's schedule",
+    "choose-doctor": "Choose doctor",
+    "choose-date": "Choose date",
+    "save-info": "Save information"
   }
 }
