--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -63,5 +63,13 @@
     "choose-doctor": "Choose doctor",
     "choose-date": "Choose date",
     "save-info": "Save information"
+  },
+  "patient": {
+    "detail-doctor": {
+      "schedule": "Schedule",
+      "no-schedule": "The doctor does not have appointments during this time, please choose another time",
+      "choose": "Choose ",
+      "book-free": " and book (free)"
+    }
   }
 }
