--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,7 +78,13 @@
       "select-doctor": "Select doctor",
       "intro": "Introduction",
       "add": "Add information",
-      "save": "Save information"
+      "save": "Save information",
+      "price": "Price",
+      "payment": "Payment medthod",
+      "province": "Province",
+      "name-clinic": "Clinic's name",
+      "address-clinic": "Clinic's address",
+      "note": "Note"
     }
   }
 }
