--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -70,6 +70,13 @@
       "no-schedule": "The doctor does not have appointments during this time, please choose another time",
       "choose": "Choose ",
       "book-free": " and book (free)"
+    },
+    "extra-infor-doctor": {
+      "text-address": "Medical examination address",
+      "price": "Medical examination price:",
+      "detail": "See details",
+      "payment": "Patients can pay costs in the following ways:",
+      "hide-price": "Hide price list."
     }
   },
   "admin": {
