--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -77,6 +77,11 @@
       "detail": "Xem chi tiết",
       "payment": "Người bệnh có thể thanh toán chi phí bằng các hình thức:",
       "hide-price": "Ẩn bảng giá."
+    },
+    "booking-modal": {
+      "title": "Thông tin đặt lịch khám bệnh",
+      "fullName": "Họ và Tên",
+      "phoneNumber": "Số diện thoại",
     }
   },
   "admin": {
