--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -36,7 +36,8 @@
       "manage-handbook": "Quản lý cẩm nang"
     },
     "doctor": {
-      "manage-schedule": "Quản lý lịch khám bệnh"
+      "manage-schedule": "Quản lý lịch khám bệnh",
+      "manage-patient": "Quản lý thông tin bệnh nhân khám bệnh"
     }
   },
   "manage-user": {
