--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -37,7 +37,8 @@
     },
     "doctor": {
       "manage-schedule": "Manage Doctor's schedule",
-      "manage-patient": "Manage Doctor's patient"
+      "manage-patient": "Manage Doctor's patient",
+      "manage-medicine": "Manage Medicine information"
     }
   },
   "manage-user": {
