--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -27,7 +27,7 @@
       "manage-doctor": "Manage doctors",
       "manage-admin": "Manage admins",
       "crud": "CRUD user",
-      "crud-redux": "CRUD Redux",
+      "crud-redux": "Manage All User",
       "clinic": "Clinics",
       "manage-clinic": "Manage clinics",
       "specialty": "Specialties",
